--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bevy_terrain = { git = "https://github.com/Ku95/bevy_terrain.git" }
 rand = "0.8.5"
 serde = "1.0.140"
 serde_json = "1.0.82"
+atm-refraction = "0.4.1"
 
 [profile.dev]
 opt-level = 3
