--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ bevy = { version = "0.8.0" }
 bevy_atmosphere = { version = "0.4.0" }
 bevy-inspector-egui = "0.12.1"
 bitflags = "1.3.2"
-heron = { version = "4.0.0", features = ["3d"] }
+bevy_rapier3d = "0.16.2"
 bevy_terrain = { git = "https://github.com/Ku95/bevy_terrain.git" }
 rand = "0.8.5"
 serde = "1.0.140"
