--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ name = "flight-of-terry"
 version = "0.0.1"
 
 [dependencies]
+bevy_rapier3d = { version = "0.16.2", features = [
+    "simd-stable",
+    "debug-render",
+] }
 bevy = { version = "0.8.0" }
 bevy_atmosphere = { version = "0.4.0" }
 bevy-inspector-egui = "0.12.1"
 bitflags = "1.3.2"
-bevy_rapier3d = "0.16.2"
 bevy_terrain = { git = "https://github.com/Ku95/bevy_terrain.git" }
 rand = "0.8.5"
 serde = "1.0.140"
